--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "openapi-types": "^12.1.3",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
